// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option go_package = "github.com/douyu/jupiter/proto/testproto/v1;testproto";

package testproto.v1;

import "google/api/annotations.proto";

// The greeting service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {
    option (google.api.http) = {
      post: "/v1/helloworld.Greeter/SayHello"
      body: "*"
    };
  }
}

// The request message containing the user's name.
message SayHelloRequest {
  // name of the user
  string name = 1;
}


// The request message containing the user's name.
message SayHelloResponse {
  // Data is the data to be sent.
  message Data {
    // name of the user
    string name = 1;
  }
  // error is the error code.
  uint32 error = 1;
  // msg is the message.
  string msg = 2;
  // data is the data.
  Data data = 3;
}

